// KhoAn — Self-Storage (WDP301) · ERD tinh gọn
// Dán toàn bộ file này vào https://dbdiagram.io (New Diagram → Import → paste).
//
// Ghi chú: hệ thống chạy MongoDB (document). Sơ đồ này biểu diễn dạng quan hệ cho dễ đọc:
//  - Sub-document nhúng (billing, deposit, access, quote, location...) được để phẳng thành cột "a.b".
//  - Mảng nhúng nhiều dòng (statusHistory, messages, renewals, items, checklist, damages) KHÔNG vẽ
//    thành bảng riêng — chúng là dữ liệu lịch sử/chi tiết nằm trong chính document, không phải thực thể.
//    Đây chính là phần làm bản cũ "quá nhiều thông tin"; ở đây lược bớt để nhìn ra quan hệ chính.
//
// Thay đổi thiết kế mới:
//  - Bỏ loại kho nhà xe (VEHICLE) và bỏ phân hạng giá (price tier).
//  - Khách TỰ CHỌN chu kỳ thuê lúc đặt (ngày/tuần/tháng), không cố định theo loại kho — mỗi loại
//    kho niêm yết sẵn 3 giá (rate_day/rate_week/rate_month). Cọc = 1 chu kỳ theo giá đã chọn.
//  - Hình thức khoá (access_method) gắn theo loại kho: PHYSICAL_KEY (chìa) / RFID_CARD (thẻ) / PIN (mật khẩu).
//  - Khách BẮT BUỘC chọn đúng một ô cụ thể trên sơ đồ lúc đặt (reservations.unit_id không còn null
//    chờ 'phân kho' sau) — ô chuyển sang RESERVED ngay khi đặt.
//  - Đổi ô kho theo yêu cầu (unit_swap_requests): khách gửi yêu cầu kèm ô muốn đổi, Quản lý chi
//    nhánh xét duyệt (miễn/thu phí), rồi xác nhận khi khách đã chuyển xong.
//  - Từ cỡ SMALL trở lên, mỗi cỡ có 2 biến thể loại kho — thường / có điều hòa (unit_types.climate_controlled)
//    — biến thể có điều hòa cộng thêm phụ phí CLIMATE của chính sách giá, không phải giá gốc khác nhau.
//  - Ca giờ nhận kho (check_in_shift): khách chọn ngay lúc đặt (reservations.preferred_check_in_shift,
//    UNKNOWN = "chưa rõ giờ" hợp lệ) — cùng bộ enum dùng làm ca làm việc cố định của nhân viên (users.shift,
//    bắt buộc với STAFF, không áp dụng vai trò khác, không nhận giá trị UNKNOWN).

Enum role {
  CUSTOMER
  STAFF
  FACILITY_MANAGER
  OPS_MANAGER
  ADMIN
}
Enum user_status {
  PENDING_VERIFICATION
  ACTIVE
  SUSPENDED
}
Enum facility_status {
  ACTIVE
  INACTIVE
  UNDER_CONSTRUCTION
}
Enum unit_category {
  LOCKER
  SMALL
  MEDIUM
  LARGE
  XL
}
Enum rental_period {
  DAY
  WEEK
  MONTH
}
Enum access_method {
  PHYSICAL_KEY
  RFID_CARD
  PIN
}
Enum unit_status {
  AVAILABLE
  RESERVED
  OCCUPIED
  MAINTENANCE
  PENDING_INSPECTION
}
Enum reservation_status {
  PENDING
  CONFIRMED
  ALLOCATED
  CHECKED_IN
  COMPLETED
  CANCELLED
}
Enum contract_status {
  ACTIVE
  DELINQUENT
  LOCKED_OUT
  MOVE_OUT_PENDING
  CLOSED
}
Enum deposit_status {
  HELD
  PARTIALLY_REFUNDED
  REFUNDED
  FORFEITED
}
Enum payment_type {
  DEPOSIT
  RENT
  RENEWAL
  LATE_FEE
  DAMAGE_FEE
  PENALTY
  REFUND
  WAIVER
  COMPENSATION
}
Enum payment_status {
  PENDING
  SUCCEEDED
  FAILED
  CANCELLED
  PARTIALLY_REFUNDED
  REFUNDED
}
Enum payment_method {
  CARD
  BANK_TRANSFER
  VNPAY
  MOMO
  CASH
  INTERNAL
}
Enum ticket_status {
  OPEN
  ASSIGNED
  IN_PROGRESS
  RESOLVED
  CLOSED
}
Enum claim_type {
  DAMAGE
  LOSS
}
Enum claim_status {
  SUBMITTED
  UNDER_REVIEW
  APPROVED
  REJECTED
  PAID
  WITHDRAWN
}
Enum swap_method {
  SELF
  DELIVERY
}
Enum swap_request_status {
  SUBMITTED
  APPROVED
  REJECTED
  DONE
  EXPIRED
  CANCELLED
}
Enum check_in_shift {
  SHIFT_1
  SHIFT_2
  SHIFT_3
  SHIFT_4
  UNKNOWN
}

Table users {
  id objectid [pk]
  firebase_uid varchar [unique, note: 'null = hồ sơ chưa gắn đăng nhập']
  email varchar [unique]
  full_name varchar
  phone varchar
  role role
  status user_status
  facility_ids "objectid[]" [note: 'chỉ STAFF/FM: >=1 chi nhánh phụ trách; FM đúng 1']
  shift check_in_shift [note: 'bắt buộc với STAFF (1 trong 4 ca cụ thể, không nhận UNKNOWN); null với vai trò khác']
  token_version int [note: 'tăng để thu hồi mọi refresh token']
  id_number_last4 varchar [note: 'customerProfile — không lưu số CCCD đầy đủ']
}

Table facilities {
  id objectid [pk]
  code varchar [unique]
  name varchar
  status facility_status
  district varchar
  city varchar
  lng float
  lat float
  policy_id objectid [note: 'null -> dùng chính sách GLOBAL đang hiệu lực']
}

Table unit_types {
  id objectid [pk]
  facility_id objectid
  code varchar
  name varchar
  category unit_category
  rate_day int [note: 'giá 1 ngày — khách tự chọn chu kỳ lúc đặt']
  rate_week int [note: 'giá 1 tuần']
  rate_month int [note: 'giá 1 tháng']
  access_method access_method [note: 'hình thức khoá dùng chung mọi ô thuộc loại này']
  area_m2 float
  climate_controlled boolean [note: 'từ cỡ SMALL trở lên có cả 2 biến thể (thường / có điều hòa) cùng giá gốc — biến thể có điều hòa cộng phụ phí CLIMATE của chính sách giá']
  indoor boolean
  deposit_override int [note: 'null -> cọc = 1 chu kỳ theo chính sách']
  min_periods int
  is_active boolean
  inventory_version int [note: 'token chống race khi đặt/đổi ô']

  indexes { (facility_id, code) [unique] }
}

Table storage_units {
  id objectid [pk]
  facility_id objectid
  unit_type_id objectid
  unit_number varchar
  floor int
  zone varchar
  status unit_status
  current_reservation_id objectid
  current_contract_id objectid
  current_swap_request_id objectid [note: 'giữ ô trong lúc chờ khách chuyển đồ sau khi yêu cầu đổi ô được duyệt']
  overlock_active boolean [note: 'lớp phủ khi LOCKED_OUT, không phải trạng thái riêng']

  indexes { (facility_id, unit_number) [unique] }
}

Table reservations {
  id objectid [pk]
  code varchar [unique]
  facility_id objectid
  customer_id objectid
  unit_type_id objectid
  unit_id objectid [note: 'khách bắt buộc chọn trên sơ đồ ngay lúc đặt — không còn chờ phân kho sau']
  status reservation_status
  start_date date
  periods int [note: 'số chu kỳ thuê']
  end_date date [note: 'start + periods × rental_period']
  preferred_check_in_shift check_in_shift [note: 'khách chọn ngay lúc đặt; UNKNOWN = "chưa rõ giờ" (mặc định)']
  "quote.rental_period" rental_period
  "quote.rate" int
  "quote.deposit_amount" int
  "quote.first_period_rent" int
  "quote.policy_id" objectid
  deposit_payment_id objectid
  contract_id objectid
  hold_expires_at datetime [note: 'chỉ khi PENDING']
  qr_token_hash varchar [note: 'checkIn — chỉ lưu hash']
}

Table rental_contracts {
  id objectid [pk]
  contract_number varchar [unique]
  facility_id objectid
  customer_id objectid
  unit_id objectid
  unit_type_id objectid
  reservation_id objectid
  status contract_status
  start_date date
  end_date date
  auto_renew boolean
  "billing.rental_period" rental_period
  "billing.rate" int [note: 'tiền thuê mỗi chu kỳ']
  "billing.next_billing_date" date
  "billing.paid_through" date
  "deposit.amount" int
  "deposit.status" deposit_status
  "balance.outstanding" int
  "access.method" access_method
  "access.key_tag" varchar
  "access.credential_hash" varchar [note: 'PIN/thẻ: chỉ hash']
  "terms.policy_id" objectid
  "terms.policy_version" int
}

Table payment_transactions {
  id objectid [pk]
  facility_id objectid
  customer_id objectid
  contract_id objectid
  reservation_id objectid
  type payment_type
  direction varchar [note: 'CHARGE | REFUND']
  amount int
  status payment_status
  method payment_method
  idempotency_key varchar [unique]
  refund_of objectid
  paid_at datetime
}

Table inspection_logs {
  id objectid [pk]
  facility_id objectid
  unit_id objectid
  contract_id objectid
  inspector_id objectid
  type varchar [note: 'MOVE_IN | MOVE_OUT | ROUTINE | MAINTENANCE']
  performed_at datetime
  total_damage_fee int
  "deposit_settlement.refund_amount" int
  "deposit_settlement.deductions" int
}

Table support_tickets {
  id objectid [pk]
  ticket_number varchar [unique]
  kind varchar [note: 'CUSTOMER_ISSUE | OPS_TASK']
  facility_id objectid
  reporter_id objectid
  contract_id objectid
  unit_id objectid
  category varchar
  priority varchar
  status ticket_status
  subject varchar
  assignee_id objectid
  due_at datetime
}

Table damage_claims {
  id objectid [pk]
  claim_number varchar [unique]
  facility_id objectid
  customer_id objectid
  contract_id objectid
  unit_id objectid
  ticket_id objectid
  type claim_type
  status claim_status
  incident_at datetime
  claimed_amount int [note: 'server tự tính từ items']
  "review.approved_amount" int
  "review.liability_cap" int [note: 'chốt hạn mức lúc duyệt']
  "settlement.payment_id" objectid
}

Table business_policies {
  id objectid [pk]
  scope varchar [note: 'GLOBAL | FACILITY']
  facility_id objectid
  version int
  is_active boolean
  effective_from date
  "deposit.mode" varchar [note: 'PERIODS_OF_RENT | FIXED']
  "deposit.value" int [note: 'PERIODS_OF_RENT: số chu kỳ (mặc định 1)']
  reservation_hold_minutes int
  grace_period_days int
  lockout_after_days int
  min_periods int
  max_periods int

  indexes { (scope, facility_id, version) [unique] }
}

Table unit_swap_requests {
  id objectid [pk]
  request_number varchar [unique]
  facility_id objectid
  customer_id objectid
  contract_id objectid
  unit_type_id objectid
  from_unit_id objectid
  to_unit_id objectid [note: 'khách chọn trên sơ đồ lúc gửi yêu cầu']
  method swap_method
  reason varchar [note: 'lý do khách tự khai']
  status swap_request_status
  fee int [note: '0 nếu lỗi cơ sở hoặc lần đổi đầu; chốt lúc FM duyệt']
  facility_fault boolean [note: 'FM đánh dấu lúc duyệt — quyết định miễn phí']
  scheduled_for date [note: 'hẹn ngày chi nhánh cử người chuyển — method DELIVERY']
  move_deadline date [note: 'hạn 7 ngày tự chuyển — method SELF']
  decided_by objectid
  completed_at datetime
  payment_id objectid

  indexes { (contract_id) [unique, note: 'chỉ 1 yêu cầu đang mở (SUBMITTED/APPROVED) mỗi hợp đồng'] }
}

Table audit_logs {
  id objectid [pk]
  at datetime
  actor_id objectid
  action varchar
  entity_type varchar
  entity_id objectid
  facility_id objectid
  result varchar [note: 'SUCCESS | DENIED | FAILED']
}

Ref: facilities.policy_id > business_policies.id
Ref: business_policies.facility_id > facilities.id
Ref: unit_types.facility_id > facilities.id
Ref: storage_units.facility_id > facilities.id
Ref: storage_units.unit_type_id > unit_types.id
Ref: storage_units.current_reservation_id - reservations.id
Ref: storage_units.current_contract_id - rental_contracts.id
Ref: reservations.facility_id > facilities.id
Ref: reservations.customer_id > users.id
Ref: reservations.unit_type_id > unit_types.id
Ref: reservations.unit_id > storage_units.id
Ref: reservations.deposit_payment_id - payment_transactions.id
Ref: reservations.contract_id - rental_contracts.id
Ref: rental_contracts.facility_id > facilities.id
Ref: rental_contracts.customer_id > users.id
Ref: rental_contracts.unit_id > storage_units.id
Ref: rental_contracts.unit_type_id > unit_types.id
Ref: rental_contracts.reservation_id - reservations.id
Ref: payment_transactions.facility_id > facilities.id
Ref: payment_transactions.customer_id > users.id
Ref: payment_transactions.contract_id > rental_contracts.id
Ref: payment_transactions.reservation_id > reservations.id
Ref: inspection_logs.facility_id > facilities.id
Ref: inspection_logs.unit_id > storage_units.id
Ref: inspection_logs.contract_id > rental_contracts.id
Ref: inspection_logs.inspector_id > users.id
Ref: support_tickets.facility_id > facilities.id
Ref: support_tickets.reporter_id > users.id
Ref: support_tickets.contract_id > rental_contracts.id
Ref: support_tickets.assignee_id > users.id
Ref: damage_claims.facility_id > facilities.id
Ref: damage_claims.customer_id > users.id
Ref: damage_claims.contract_id > rental_contracts.id
Ref: damage_claims.unit_id > storage_units.id
Ref: damage_claims.ticket_id - support_tickets.id
Ref: audit_logs.actor_id > users.id
Ref: audit_logs.facility_id > facilities.id
Ref: unit_swap_requests.facility_id > facilities.id
Ref: unit_swap_requests.customer_id > users.id
Ref: unit_swap_requests.contract_id > rental_contracts.id
Ref: unit_swap_requests.unit_type_id > unit_types.id
Ref: unit_swap_requests.from_unit_id > storage_units.id
Ref: unit_swap_requests.to_unit_id > storage_units.id
Ref: unit_swap_requests.decided_by > users.id
Ref: unit_swap_requests.payment_id - payment_transactions.id
Ref: storage_units.current_swap_request_id - unit_swap_requests.id
